# ncnn-test

./: CMakeLists.txt  main.cpp  omp_test.cpp  onnx2ncnn  opencv_test.cpp
models/: model.id.h  model.mem.h  model.onnx  model.param  optimized_model.param
utility/: utility.cpp  utility.h
